# DDBacktest

./: .gitignore  LICENSE  README.md  config.toml  pyproject.toml  todo
app/: __main__.py  backtest.py  configuration.py
app/schemas/: __init__.py  candle.py  result.py  type_hints.py
app/strategies/: __init__.py  abstract.py  macd_strategy.py
app/strategies/macd_strategy/: __init__.py  draw_chart.py  strategy.py
app/utils/: __init__.py  csv_reader.py  download_data.py
data/: data
tmp/: tmp
