[tool.poetry]
name = "pump&dump"
version = "0.1.0"
description = ""
authors = ["blowyourbra1n <blowyourbra1n@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
backtesting = "^0.3.3"
pendulum = "^2.1.2"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
pydantic = "^2.4.2"
toml = "^0.10.2"
plotly = "^5.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
